grammars/SimpleFortran2003Parser.py
# Generated from ../../grammars/SimpleFortran2003Parser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleFortran2003Parser ( Parser ):

    grammarFileName = "SimpleFortran2003Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'::'", "'=>'", "'='", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "ABSTRACT", "EXTENDS", "FINAL", "CLASS", 
                      "PROCEDURE", "VOLATILE", "PROTECTED", "ASSOCIATE", 
                      "BLOCK", "INTEGER", "REAL", "CHARACTER", "PROGRAM", 
                      "END", "MODULE", "DOUBLE_COLON", "ARROW", "ASSIGN", 
                      "LPAREN", "RPAREN", "COMMA", "IDENTIFIER", "INTEGER_LITERAL", 
                      "WS", "COMMENT" ]

    RULE_program_unit_f2003 = 0
    RULE_main_program_f2003 = 1
    RULE_module_f2003 = 2
    RULE_declaration_list = 3
    RULE_declaration = 4
    RULE_type_declaration_stmt = 5
    RULE_class_declaration_stmt = 6
    RULE_procedure_declaration_stmt = 7
    RULE_volatile_stmt = 8
    RULE_protected_stmt = 9
    RULE_entity_list = 10

    ruleNames =  [ "program_unit_f2003", "main_program_f2003", "module_f2003", 
                   "declaration_list", "declaration", "type_declaration_stmt", 
                   "class_declaration_stmt", "procedure_declaration_stmt", 
                   "volatile_stmt", "protected_stmt", "entity_list" ]

    EOF = Token.EOF
    ABSTRACT=1
    EXTENDS=2
    FINAL=3
    CLASS=4
    PROCEDURE=5
    VOLATILE=6
    PROTECTED=7
    ASSOCIATE=8
    BLOCK=9
    INTEGER=10
    REAL=11
    CHARACTER=12
    PROGRAM=13
    END=14
    MODULE=15
    DOUBLE_COLON=16
    ARROW=17
    ASSIGN=18
    LPAREN=19
    RPAREN=20
    COMMA=21
    IDENTIFIER=22
    INTEGER_LITERAL=23
    WS=24
    COMMENT=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Program_unit_f2003Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_program_f2003(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Main_program_f2003Context,0)


        def module_f2003(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Module_f2003Context,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_program_unit_f2003

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_unit_f2003" ):
                listener.enterProgram_unit_f2003(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_unit_f2003" ):
                listener.exitProgram_unit_f2003(self)




    def program_unit_f2003(self):

        localctx = SimpleFortran2003Parser.Program_unit_f2003Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program_unit_f2003)
        try:
            self.state = 24
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.main_program_f2003()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 23
                self.module_f2003()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_program_f2003Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleFortran2003Parser.PROGRAM)
            else:
                return self.getToken(SimpleFortran2003Parser.PROGRAM, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleFortran2003Parser.IDENTIFIER)
            else:
                return self.getToken(SimpleFortran2003Parser.IDENTIFIER, i)

        def END(self):
            return self.getToken(SimpleFortran2003Parser.END, 0)

        def declaration_list(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Declaration_listContext,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_main_program_f2003

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_program_f2003" ):
                listener.enterMain_program_f2003(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_program_f2003" ):
                listener.exitMain_program_f2003(self)




    def main_program_f2003(self):

        localctx = SimpleFortran2003Parser.Main_program_f2003Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main_program_f2003)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(SimpleFortran2003Parser.PROGRAM)
            self.state = 27
            self.match(SimpleFortran2003Parser.IDENTIFIER)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7408) != 0):
                self.state = 28
                self.declaration_list()


            self.state = 31
            self.match(SimpleFortran2003Parser.END)
            self.state = 32
            self.match(SimpleFortran2003Parser.PROGRAM)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 33
                self.match(SimpleFortran2003Parser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_f2003Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODULE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleFortran2003Parser.MODULE)
            else:
                return self.getToken(SimpleFortran2003Parser.MODULE, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleFortran2003Parser.IDENTIFIER)
            else:
                return self.getToken(SimpleFortran2003Parser.IDENTIFIER, i)

        def END(self):
            return self.getToken(SimpleFortran2003Parser.END, 0)

        def declaration_list(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Declaration_listContext,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_module_f2003

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_f2003" ):
                listener.enterModule_f2003(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_f2003" ):
                listener.exitModule_f2003(self)




    def module_f2003(self):

        localctx = SimpleFortran2003Parser.Module_f2003Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_f2003)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(SimpleFortran2003Parser.MODULE)
            self.state = 37
            self.match(SimpleFortran2003Parser.IDENTIFIER)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7408) != 0):
                self.state = 38
                self.declaration_list()


            self.state = 41
            self.match(SimpleFortran2003Parser.END)
            self.state = 42
            self.match(SimpleFortran2003Parser.MODULE)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 43
                self.match(SimpleFortran2003Parser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleFortran2003Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SimpleFortran2003Parser.DeclarationContext,i)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_declaration_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_list" ):
                listener.enterDeclaration_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_list" ):
                listener.exitDeclaration_list(self)




    def declaration_list(self):

        localctx = SimpleFortran2003Parser.Declaration_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self.declaration()
                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7408) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_declaration_stmt(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Type_declaration_stmtContext,0)


        def class_declaration_stmt(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Class_declaration_stmtContext,0)


        def procedure_declaration_stmt(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Procedure_declaration_stmtContext,0)


        def volatile_stmt(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Volatile_stmtContext,0)


        def protected_stmt(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Protected_stmtContext,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = SimpleFortran2003Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 11, 12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.type_declaration_stmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.class_declaration_stmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.procedure_declaration_stmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.volatile_stmt()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.protected_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declaration_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(SimpleFortran2003Parser.INTEGER, 0)

        def DOUBLE_COLON(self):
            return self.getToken(SimpleFortran2003Parser.DOUBLE_COLON, 0)

        def entity_list(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Entity_listContext,0)


        def REAL(self):
            return self.getToken(SimpleFortran2003Parser.REAL, 0)

        def CHARACTER(self):
            return self.getToken(SimpleFortran2003Parser.CHARACTER, 0)

        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_type_declaration_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_declaration_stmt" ):
                listener.enterType_declaration_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_declaration_stmt" ):
                listener.exitType_declaration_stmt(self)




    def type_declaration_stmt(self):

        localctx = SimpleFortran2003Parser.Type_declaration_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_declaration_stmt)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(SimpleFortran2003Parser.INTEGER)
                self.state = 59
                self.match(SimpleFortran2003Parser.DOUBLE_COLON)
                self.state = 60
                self.entity_list()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(SimpleFortran2003Parser.REAL)
                self.state = 62
                self.match(SimpleFortran2003Parser.DOUBLE_COLON)
                self.state = 63
                self.entity_list()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(SimpleFortran2003Parser.CHARACTER)
                self.state = 65
                self.match(SimpleFortran2003Parser.DOUBLE_COLON)
                self.state = 66
                self.entity_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declaration_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(SimpleFortran2003Parser.CLASS, 0)

        def LPAREN(self):
            return self.getToken(SimpleFortran2003Parser.LPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(SimpleFortran2003Parser.IDENTIFIER, 0)

        def RPAREN(self):
            return self.getToken(SimpleFortran2003Parser.RPAREN, 0)

        def DOUBLE_COLON(self):
            return self.getToken(SimpleFortran2003Parser.DOUBLE_COLON, 0)

        def entity_list(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Entity_listContext,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_class_declaration_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration_stmt" ):
                listener.enterClass_declaration_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration_stmt" ):
                listener.exitClass_declaration_stmt(self)




    def class_declaration_stmt(self):

        localctx = SimpleFortran2003Parser.Class_declaration_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_declaration_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(SimpleFortran2003Parser.CLASS)
            self.state = 70
            self.match(SimpleFortran2003Parser.LPAREN)
            self.state = 71
            self.match(SimpleFortran2003Parser.IDENTIFIER)
            self.state = 72
            self.match(SimpleFortran2003Parser.RPAREN)
            self.state = 73
            self.match(SimpleFortran2003Parser.DOUBLE_COLON)
            self.state = 74
            self.entity_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Procedure_declaration_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(SimpleFortran2003Parser.PROCEDURE, 0)

        def LPAREN(self):
            return self.getToken(SimpleFortran2003Parser.LPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(SimpleFortran2003Parser.IDENTIFIER, 0)

        def RPAREN(self):
            return self.getToken(SimpleFortran2003Parser.RPAREN, 0)

        def DOUBLE_COLON(self):
            return self.getToken(SimpleFortran2003Parser.DOUBLE_COLON, 0)

        def entity_list(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Entity_listContext,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_procedure_declaration_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure_declaration_stmt" ):
                listener.enterProcedure_declaration_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure_declaration_stmt" ):
                listener.exitProcedure_declaration_stmt(self)




    def procedure_declaration_stmt(self):

        localctx = SimpleFortran2003Parser.Procedure_declaration_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_procedure_declaration_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SimpleFortran2003Parser.PROCEDURE)
            self.state = 77
            self.match(SimpleFortran2003Parser.LPAREN)
            self.state = 78
            self.match(SimpleFortran2003Parser.IDENTIFIER)
            self.state = 79
            self.match(SimpleFortran2003Parser.RPAREN)
            self.state = 80
            self.match(SimpleFortran2003Parser.DOUBLE_COLON)
            self.state = 81
            self.entity_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Volatile_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOLATILE(self):
            return self.getToken(SimpleFortran2003Parser.VOLATILE, 0)

        def DOUBLE_COLON(self):
            return self.getToken(SimpleFortran2003Parser.DOUBLE_COLON, 0)

        def entity_list(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Entity_listContext,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_volatile_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVolatile_stmt" ):
                listener.enterVolatile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVolatile_stmt" ):
                listener.exitVolatile_stmt(self)




    def volatile_stmt(self):

        localctx = SimpleFortran2003Parser.Volatile_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_volatile_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(SimpleFortran2003Parser.VOLATILE)
            self.state = 84
            self.match(SimpleFortran2003Parser.DOUBLE_COLON)
            self.state = 85
            self.entity_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Protected_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROTECTED(self):
            return self.getToken(SimpleFortran2003Parser.PROTECTED, 0)

        def DOUBLE_COLON(self):
            return self.getToken(SimpleFortran2003Parser.DOUBLE_COLON, 0)

        def entity_list(self):
            return self.getTypedRuleContext(SimpleFortran2003Parser.Entity_listContext,0)


        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_protected_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProtected_stmt" ):
                listener.enterProtected_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProtected_stmt" ):
                listener.exitProtected_stmt(self)




    def protected_stmt(self):

        localctx = SimpleFortran2003Parser.Protected_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_protected_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SimpleFortran2003Parser.PROTECTED)
            self.state = 88
            self.match(SimpleFortran2003Parser.DOUBLE_COLON)
            self.state = 89
            self.entity_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Entity_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleFortran2003Parser.IDENTIFIER)
            else:
                return self.getToken(SimpleFortran2003Parser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleFortran2003Parser.COMMA)
            else:
                return self.getToken(SimpleFortran2003Parser.COMMA, i)

        def getRuleIndex(self):
            return SimpleFortran2003Parser.RULE_entity_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity_list" ):
                listener.enterEntity_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity_list" ):
                listener.exitEntity_list(self)




    def entity_list(self):

        localctx = SimpleFortran2003Parser.Entity_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_entity_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SimpleFortran2003Parser.IDENTIFIER)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 92
                self.match(SimpleFortran2003Parser.COMMA)
                self.state = 93
                self.match(SimpleFortran2003Parser.IDENTIFIER)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





